App Name Changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.task_app">
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
-        android:label="task_app"
+        android:label="Task App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
